adobe_page_updated

--- a/adobe-after-effect-animation-tutorial.html
+++ b/adobe-after-effect-animation-tutorial.html
@@ -883,11 +883,11 @@
                   </figure>
 
                     <h3>Step-by-Step Adobe After Effects Animation Tutorial | Top Adobe After Effects Plugins for Animators</h3>
-                    <h1>Adobe After Effects Beginner Guide to Learn Animation</h1>
+                    <p>Adobe After Effects Beginner Guide to Learn Animation</p>
                       <h2>Introduction to Adobe After Effects</h2>
                       <p>Adobe After Effects is a powerful tool for creating motion graphics and visual effects. It is widely used in the film, TV, and web video industries. This guide will help you get started with the basics of After Effects and guide you through the process of creating simple animations.</p>
                       <h2 id="getting-started">Getting Started</h2>
-                      <h3 id="1-installing-after-effects">1. Installing After Effects</h3>
+                      <h5 id="1-installing-after-effects">1. Installing After Effects</h5>
                       <script type="text/javascript">
                         atOptions = {
                           'key' : '2a2217b42fa7a8d12535315bcd7f5d42',
@@ -904,31 +904,31 @@
                       Sign in</strong> with your Adobe ID.
                       Download and install After Effects</strong> from the Creative Cloud interface.
                       </ol>
-                      <h3 id="2-understanding-the-interface">2. Understanding the Interface</h3>
+                      <h5 id="2-understanding-the-interface">2. Understanding the Interface</h5>
                       <p>After launching After Effects, you will see several panels:</p>
                       <ul>
-                        <script type="text/javascript">
-                          atOptions = {
-                            'key' : '2a2217b42fa7a8d12535315bcd7f5d42',
-                            'format' : 'iframe',
-                            'height' : 90,
-                            'width' : 728,
-                            'params' : {}
-                          };
-                        </script>
-                        <script type="text/javascript" src="//www.topcpmcreativeformat.com/2a2217b42fa7a8d12535315bcd7f5d42/invoke.js"></script>
                       Project Panel: Manages your assets (videos, images, audio files).
                       Composition Panel: Displays your current composition (your working canvas).
                       Timeline Panel: Shows layers and keyframes, where most animation work happens.
                       Tools Panel: Contains tools for editing and creating elements.
                       </ul>
-                                                <!-- Banners -->
+                      <script type="text/javascript">
+                        atOptions = {
+                          'key' : '2a2217b42fa7a8d12535315bcd7f5d42',
+                          'format' : 'iframe',
+                          'height' : 90,
+                          'width' : 728,
+                          'params' : {}
+                        };
+                      </script>
+                      <script type="text/javascript" src="//www.topcpmcreativeformat.com/2a2217b42fa7a8d12535315bcd7f5d42/invoke.js"></script>
+                      <!-- Banners -->
                         <div class="row align-items-stretch">
                           <div class="col-lg-5">
                             <!-- Article -->
                             <article class="g-flex-middle g-bg-cover g-bg-size-cover g-bg-black-opacity-0_3--after g-py-75 g-px-50 g-mb-30" data-bg-img-src="../../assets/img-temp/400x270/img1.jpg">
                               <div class="g-flex-middle-item g-z-index-1 g-width-300">
-                                <h3 class="g-color-white g-font-weight-700 text-uppercase g-letter-spacing-3 g-mb-15">Infgraphic Template</h3>
+                                <h5 class="g-color-white g-font-weight-700 text-uppercase g-letter-spacing-3 g-mb-15">Infgraphic Template</h5>
                                 <div class="g-line-height-2 g-mb-20">
                                   <p class="g-color-white-opacity-0_9">Visit Infographic profile &amp; Buy from AdobeStock </p>
                                 </div>
@@ -941,7 +941,7 @@
                             <article class="text-uppercase text-center g-flex-middle g-bg-cover g-bg-size-cover g-bg-black-opacity-0_3--after g-color-white g-py-75 g-px-50" data-bg-img-src="../../assets/img-temp/400x270/img18.jpg">
                               <div class="g-flex-middle-item g-z-index-1">
                                 <span class="d-inline-block g-brd-bottom g-brd-2 g-brd-primary g-font-weight-700 g-font-size-16 g-letter-spacing-1 g-pb-8 g-mb-20">Examples of branding projects</span>
-                                <h3 class="h2 g-font-weight-700 g-letter-spacing-3 g-mb-35">Branding work</h3>
+                                <h5 class="h2 g-font-weight-700 g-letter-spacing-3 g-mb-35">Branding work</h5>
                                 <a class="btn btn-md u-btn-outline-white g-font-weight-600 g-font-size-11 text-uppercase" href="https://stock.adobe.com/contributor/211977281/spurnoanimation">Shop Now</a>
                               </div>
                             </article>
@@ -968,13 +968,13 @@
                           </div>
                         </div>
                         <!-- End Banners -->
-                      <h3 id="3-creating-a-new-project-and-composition">3. Creating a New Project and Composition</h3>
+                      <h5 id="3-creating-a-new-project-and-composition">3. Creating a New Project and Composition</h5>
                       <ol>
                       Create a New Project:</strong> Go to <code>File</code> &gt; <code>New</code> &gt; <code>New Project</code>.
                       Create a New Composition:</strong> Go to <code>Composition</code> &gt; <code>New Composition</code>. Set your desired resolution, frame rate, and duration.
                       </ol>
                       <h2 id="basic-animation-workflow">Basic Animation Workflow</h2>
-                      <h3 id="1-importing-assets">1. Importing Assets</h3>
+                      <h5 id="1-importing-assets">1. Importing Assets</h5>
                       <ol>
                       Import Files:</strong> Drag and drop your files into the Project Panel or go to <code>File</code> &gt; <code>Import</code> &gt; <code>File</code>.
                       Organize Assets:</strong> Create folders in the Project Panel to organize your files.
@@ -989,19 +989,19 @@
                         };
                       </script>
                       <script type="text/javascript" src="//www.topcpmcreativeformat.com/2a2217b42fa7a8d12535315bcd7f5d42/invoke.js"></script>
-                      <h3 id="2-adding-assets-to-a-composition">2. Adding Assets to a Composition</h3>
+                      <h5 id="2-adding-assets-to-a-composition">2. Adding Assets to a Composition</h5>
                       <ol>
                       Drag Assets:</strong> Drag your assets from the Project Panel to the Timeline or Composition Panel.
                       Layer Order:</strong> Arrange layers in the Timeline Panel. Layers at the top are in front of layers below.
                       </ol>
-                      <h3 id="3-basic-transformations">3. Basic Transformations</h3>
+                      <h5 id="3-basic-transformations">3. Basic Transformations</h5>
                       <ol>
                       Position:</strong> Move layers around the composition. Shortcut: <code>P</code>.
                       Scale:</strong> Resize layers. Shortcut: <code>S</code>.
                       Rotation:</strong> Rotate layers. Shortcut: <code>R</code>.
                       Opacity:</strong> Adjust the transparency of layers. Shortcut: <code>T</code>.
                       </ol>
-                      <h3 id="4-keyframing-basics">4. Keyframing Basics</h3>
+                      <h5 id="4-keyframing-basics">4. Keyframing Basics</h5>
                       <p>Keyframes are essential for creating animations. They mark the start and end points of any change.</p>
                       <ol>
                       Activate Keyframes:</strong> Click the stopwatch icon next to the property you want to animate (e.g., Position, Scale).
@@ -1019,28 +1019,28 @@
                       </script>
                       <script type="text/javascript" src="//www.topcpmcreativeformat.com/2a2217b42fa7a8d12535315bcd7f5d42/invoke.js"></script>
                       <h2 id="creating-simple-animations">Creating Simple Animations</h2>
-                      <h3 id="1-moving-an-object">1. Moving an Object</h3>
+                      <h5 id="1-moving-an-object">1. Moving an Object</h5>
                       <ol>
                       Select Layer:</strong> Click on the layer you want to animate.
                       Position Keyframes:</strong> Move the playhead to the start, click the Position stopwatch, move the playhead forward, and then move the object in the Composition Panel.
                       </ol>
-                      <h3 id="2-scaling-an-object">2. Scaling an Object</h3>
+                      <h5 id="2-scaling-an-object">2. Scaling an Object</h5>
                       <ol>
                       Select Layer:</strong> Click on the layer you want to animate.
                       Scale Keyframes:</strong> Move the playhead to the start, click the Scale stopwatch, move the playhead forward, and then change the scale value.
                       </ol>
-                      <h3 id="3-rotating-an-object">3. Rotating an Object</h3>
+                      <h5 id="3-rotating-an-object">3. Rotating an Object</h5>
                       <ol>
                       Select Layer:</strong> Click on the layer you want to animate.
                       Rotation Keyframes:</strong> Move the playhead to the start, click the Rotation stopwatch, move the playhead forward, and then change the rotation value.
                       </ol>
-                      <h3 id="4-fading-in-and-out">4. Fading In and Out</h3>
+                      <h5 id="4-fading-in-and-out">4. Fading In and Out</h5>
                       <ol>
                       Select Layer:</strong> Click on the layer you want to animate.
                       Opacity Keyframes:</strong> Move the playhead to the start, click the Opacity stopwatch, move the playhead forward, and then change the opacity value from 0% to 100% (fade in) or from 100% to 0% (fade out).
                       </ol>
                       <h2 id="using-effects-and-presets">Using Effects and Presets</h2>
-                      <h3 id="1-applying-effects">1. Applying Effects</h3>
+                      <h5 id="1-applying-effects">1. Applying Effects</h5>
                       <ol>
                       Select Layer:</strong> Click on the layer you want to apply an effect to.
                       Effect Panel:</strong> Go to <code>Effect</code> &gt; Choose an effect (e.g., Blur, Distort).
@@ -1056,7 +1056,7 @@
                         };
                       </script>
                       <script type="text/javascript" src="//www.topcpmcreativeformat.com/2a2217b42fa7a8d12535315bcd7f5d42/invoke.js"></script>
-                      <h3 id="2-using-presets">2. Using Presets</h3>
+                      <h5 id="2-using-presets">2. Using Presets</h5>
                       <ol>
                       Browse Presets:</strong> Go to <code>Animation</code> &gt; <code>Browse Presets</code> to open Adobe Bridge and explore presets.
                       Apply Preset:</strong> Drag and drop the preset onto your layer in After Effects.
@@ -1083,18 +1083,18 @@
                       Render:</strong> Click the <code>Render</code> button to export your animation.</li>
                       </ol>
                       <h2 id="additional-tips">Additional Tips</h2>
-                      <h3 id="1-keyboard-shortcuts">1. Keyboard Shortcuts</h3>
+                      <h5 id="1-keyboard-shortcuts">1. Keyboard Shortcuts</h5>
                       <ul>
                       B:</strong> Set beginning of work area.</li>
                       N:</strong> Set end of work area.</li>
                       0 (on numeric keypad):</strong> RAM Preview.</li>
                       Spacebar:</strong> Play/Pause.</li>
                       </ul>
-                      <h3 id="2-use-pre-compositions">2. Use Pre-compositions</h3>
+                      <h5 id="2-use-pre-compositions">2. Use Pre-compositions</h5>
                       <ul>
                       Pre-compose Layers:</strong> Group layers into a single composition by selecting layers and going to <code>Layer</code> &gt; <code>Pre-compose</code>.</li>
                       </ul>
-                      <h3 id="3-save-often">3. Save Often</h3>
+                      <h5 id="3-save-often">3. Save Often</h5>
                       <ul>
                       Auto-Save:</strong> Enable auto-save in <code>Edit</code> &gt; <code>Preferences</code> &gt; <code>Auto-Save</code>.</li>
                       </ul>
@@ -1115,65 +1115,17 @@
                       Online Courses:</strong> Websites like Udemy and Coursera have structured courses for learning After Effects.</li>
                       </ul>
                       <p>With this guide, you should have a solid foundation to start creating animations in Adobe After Effects. Practice regularly and explore various features and techniques to enhance your skills. Happy animating!</p>
-                  <!-- google ads  -->
-                  <section class="ad-section in-content-ad">
-                    <ins class="adsbygoogle"
-                            style="display:block; text-align:center;"
-                            data-ad-layout="in-article"
-                            data-ad-format="fluid"
-                            data-ad-client="ca-pub-5756742830355549"
-                            data-ad-slot="9992837563"></ins>
-                        <script>
-                            (adsbygoogle = window.adsbygoogle || []).push({});
-                        </script>
-                    <div class="ad-container">
-                    <!-- Paste AdSense code here -->
-                </div>
-                </section>
                   <div class="g-width-70x--md 1mx-auto g-my-40">
                     </blockquote>
                   </div>
-                  
-                  <!-- google ads  -->
-                  <section class="ad-section in-content-ad">
-                    <ins class="adsbygoogle"
-                            style="display:block; text-align:center;"
-                            data-ad-layout="in-article"
-                            data-ad-format="fluid"
-                            data-ad-client="ca-pub-5756742830355549"
-                            data-ad-slot="9992837563"></ins>
-                        <script>
-                            (adsbygoogle = window.adsbygoogle || []).push({});
-                        </script>
-                    <div class="ad-container">
-                    <!-- Paste AdSense code here -->
-                </div>
-                </section>
-                  <h3 class="h5 g-color-gray-dark-v1 g-font-weight-600 g-mb-10">Now and Future</h3>
-                    <li class="g-mb-15">
-                      <h4 class="h6 d-flex align-items-baseline">
-                        <i class="fa fa-angle-right g-color-gray-dark-v5 g-mr-10"></i>
-                        <span>Learn Digital Marketing</span>
-                      </h4>
-                    </li>
-                    <li class="g-mb-15">
-                      <h4 class="h6 d-flex align-items-baseline">
-                        <i class="fa fa-angle-right g-color-gray-dark-v5 g-mr-10"></i>
-                        <span>Support Center</span>
-                      </h4>
-                    </li>
-                    <li>
-                      <h4 class="h6 d-flex align-items-baseline">
-                        <i class="fa fa-angle-right g-color-gray-dark-v5 g-mr-10"></i>
-                        <span>SPurno Animation Studio</span>
-                      </h4>
-                    </li>
+                  <h5 class="h5 g-color-gray-dark-v1 g-font-weight-600 g-mb-10">Download Section</h5>
+                  <a href="https://mega.nz/folder/U1AhyDwL#kc97tQTgFsdxbAkrdj7CnA" class="btn btn-md u-btn-outline-gradient-v2 g-mr-10 g-mb-15">Download 5 Premium Templates</a>
                   </ul>
 
-                  <p>Praesent ultrices, enim a varius condimentum, nunc elit rhoncus ligula, quis fringilla risus augue sit amet enim. Curabitur dolor elit, egestas eget lectus vel, pretium semper tellus. Nunc urna lectus, vulputate ut tellus aliquam, pharetra consectetur enim. Nunc scelerisque libero diam, nec tempor justo hendrerit eu.</p>
+                  
 
                   <div class="text-center g-width-70x--md mx-auto g-my-40">
-                    <h3 class="text-uppercase g-color-primary"></h3>
+                    <h5 class="text-uppercase g-color-primary"></h5>
                   </div>
                 </div>
 
@@ -1251,9 +1203,9 @@
                           </figcaption>
                         </figure>
 
-                        <h3 class="g-font-size-16 g-mb-10">
+                        <h5 class="g-font-size-16 g-mb-10">
                           <a class="u-link-v5 g-color-gray-dark-v1 g-color-primary--hover" href="#">Clark Valberg is a new CEO of InVision..</a>
-                        </h3>
+                        </h5>
                       </article>
                     </div>
                     <!-- End Article Video -->
@@ -1269,9 +1221,9 @@
                           </figcaption>
                         </figure>
 
-                        <h3 class="g-font-size-16 g-mb-10">
+                        <h5 class="g-font-size-16 g-mb-10">
                           <a class="u-link-v5 g-color-gray-dark-v1 g-color-primary--hover" href="#">How to run a ticket: Best 10 point..</a>
-                        </h3>
+                        </h5>
                       </article>
                     </div>
                     <!-- End Article Video -->
@@ -1287,9 +1239,9 @@
                           </figcaption>
                         </figure>
 
-                        <h3 class="g-font-size-16 g-mb-10">
+                        <h5 class="g-font-size-16 g-mb-10">
                           <a class="u-link-v5 g-color-gray-dark-v1 g-color-primary--hover" href="#">Skyscrapers from blocking sunlight..</a>
-                        </h3>
+                        </h5>
                       </article>
                     </div>
                     <!-- End Article Video -->
