--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
     <meta name="twitter:title" content="SPurno Animation Studio | Animation Artist on AdobeStock & Shutterstock" />
     <meta name="twitter:description" content="SPurno Animation Studio | Animation Artist on AdobeStock & Shutterstock" />
     <meta name="twitter:image" content="http://spurno.github.io"/>
+    <meta name="msvalidate.01" content="450E162F57167A95BB3C38776CABEB3F" />
     <script type="application/ld+json" src="application/Id+json.json"></script>
     <!-- Fav-->
     <link rel="shortcut icon" href="favicon/android-chrome-192x192.png">
