--- a/3d-infographic.html
+++ b/3d-infographic.html
@@ -47,6 +47,7 @@
 
     <!-- CSS Global Compulsory -->
     <link rel="stylesheet" href="blog/assets/vendor/bootstrap/bootstrap.min.css">
+    <script src="js/indexnowapi.js"></script>
 
     <!-- CSS Implementing Plugins -->
     <link rel="stylesheet" href="blog/assets/vendor/icon-awesome/css/font-awesome.min.css">
