--- a/index.html
+++ b/index.html
@@ -57,6 +57,7 @@
     <link rel="stylesheet" href="blog/assets/vendor/revolution-slider/revolution/css/navigation.css">
     <link rel="stylesheet" href="rev/assets/css/style.css">
     <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-5756742830355549" crossorigin="anonymous"></script>
+    <script src="js/indexnowapi.js"></script>
   </head>
 
   <body>
