--- a/animated-wallpaper.html
+++ b/animated-wallpaper.html
@@ -2185,12 +2185,12 @@
     </script>
   </body>
 </script>
-<script async src="https://www.googletagmanager.com/gtag/js?id=G-J6N56GN0M0"></script>
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-W0BPR41NGK"></script>
 <script>
   window.dataLayer = window.dataLayer || [];
   function gtag(){dataLayer.push(arguments);}
   gtag('js', new Date());
 
-  gtag('config', 'G-J6N56GN0M0');
+  gtag('config', 'G-W0BPR41NGK');
 </script>
 </html>
