--- a/digital-marketing.html
+++ b/digital-marketing.html
@@ -2273,13 +2273,13 @@
       });
     </script>
       </script>
-      <script async src="https://www.googletagmanager.com/gtag/js?id=G-J6N56GN0M0"></script>
+      <script async src="https://www.googletagmanager.com/gtag/js?id=G-W0BPR41NGK"></script>
       <script>
         window.dataLayer = window.dataLayer || [];
         function gtag(){dataLayer.push(arguments);}
         gtag('js', new Date());
 
-        gtag('config', 'G-J6N56GN0M0');
+        gtag('config', 'G-W0BPR41NGK');
       </script>
               <script>
                 fetch('https://spurno.github.io/application/Id+json.json')
