--- a/3d-infographic.html
+++ b/3d-infographic.html
@@ -2380,13 +2380,13 @@
       });
     </script>
           <!-- Google tag (gtag.js) -->
-      <script async src="https://www.googletagmanager.com/gtag/js?id=G-W0BPR41NGK"></script>
+      <script async src="https://www.googletagmanager.com/gtag/js?id=G-1PFQJV83HK"></script>
       <script>
         window.dataLayer = window.dataLayer || [];
         function gtag(){dataLayer.push(arguments);}
         gtag('js', new Date());
 
-        gtag('config', 'G-W0BPR41NGK');
+        gtag('config', 'G-1PFQJV83HK');
       </script>
       <script>
         document.addEventListener('contextmenu', function (event) {
