--- a/motion-graphics-background.html
+++ b/motion-graphics-background.html
@@ -2222,13 +2222,13 @@
       });
     </script>
         </script>
-        <script async src="https://www.googletagmanager.com/gtag/js?id=G-W0BPR41NGK"></script>
+        <script async src="https://www.googletagmanager.com/gtag/js?id=G-1PFQJV83HK"></script>
         <script>
           window.dataLayer = window.dataLayer || [];
           function gtag(){dataLayer.push(arguments);}
           gtag('js', new Date());
   
-          gtag('config', 'G-W0BPR41NGK');
+          gtag('config', 'G-1PFQJV83HK');
         </script>
         <script>
           fetch('https://spurno.github.io/application/Id+json.json')
