links for animation_company

--- a/background-animation.html
+++ b/background-animation.html
@@ -902,7 +902,7 @@
                   </div>
                   <p>Video background animation refers to the use of video content as a moving background on a website. Unlike static images or simple color backgrounds, video backgrounds can include anything from abstract animations and nature scenes to product showcases and brand stories. These animations add depth and interest to a webpage, creating an immersive experience for users.</p>
 
-                  <p>Find & Download Free Graphic Resources for Animation Background. 849000+ Vectors, Stock Photos & PSD files. ✓ Free for commercial use ✓ High Quality Images.</p>
+                  <p>Find & Download Free Graphic Resources for Animation Background. Animated Background videos, 3d Infographics for your video project Animation Studio in <strong>Bangladesh</strong></p>
 
                   <div class="embed-responsive embed-responsive-16by9 g-mb-60">
                     <div class="watermark">SPurno Animation Studio</div>
@@ -1427,7 +1427,7 @@
                   <li class="g-brd-bottom g-brd-gray-light-v4 g-pb-10 g-mb-12">
                     <h4 class="h6">
                       <i class="fa fa-angle-right g-color-gray-dark-v5 g-mr-5"></i>
-                      <a class="u-link-v5 g-color-gray-dark-v1 g-color-primary--hover" href="web-design-with-ui-and-ux.html">Web Design with UX/UI</a>
+                      <a class="u-link-v5 g-color-gray-dark-v1 g-color-primary--hover" href="https://spurno.github.io">3d animation company</a>
                     </h4>
                   </li>
                   <li class="g-brd-bottom g-brd-gray-light-v4 g-pb-10 g-mb-12">
