--- a/background-animation.html
+++ b/background-animation.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <!-- Title -->
-    <title>Background Animation Stock Video Footage for Premium Download | SPurno Animation Studio - Corporate Animation Artist at AdobeStock & Shutterstock</title>
+    <title>Background Animation Stock Video Footage for Premium Download from 3d animation company and video animation company</title>
 
     <!-- Required Meta Tags Always Come First -->
     <meta charset="utf-8">
