--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en" class="font-primary">
 <head>
-    <title>SPurno Animation Studio - Video Animation Company , 3D Animation Studio in Bangladesh</title>
+    <title>SPurno Animation Studio - Video Animation Company</title>
 
     <!-- Required Meta Tags Always Come First -->
     <meta charset="utf-8">
@@ -888,6 +888,8 @@
                          data-paddingleft="[0,0,40,40]"
                          style="z-index: 7; white-space: nowrap; font-size: 110px; line-height: 100px; font-weight: 400; color: rgba(255, 255, 255, 1.00); display: inline-block;font-family:Quicksand;">
                          SPurno Animation Studio
+                         <br> 
+                         Video Animation Company
                     </div>
 
                     <!-- LAYER NR. 4 -->
