links_for_adobe

--- a/animation-studio-after-effects.html
+++ b/animation-studio-after-effects.html
@@ -1148,33 +1148,19 @@
                     <!-- Paste AdSense code here -->
                 </div>
                 </section>
-                  <h3 class="h5 g-color-gray-dark-v1 g-font-weight-600 g-mb-10">Now and Future</h3>
-                    <li class="g-mb-15">
-                      <h4 class="h6 d-flex align-items-baseline">
-                        <i class="fa fa-angle-right g-color-gray-dark-v5 g-mr-10"></i>
-                        <span>Learn Digital Marketing</span>
-                      </h4>
-                    </li>
-                    <li class="g-mb-15">
-                      <h4 class="h6 d-flex align-items-baseline">
-                        <i class="fa fa-angle-right g-color-gray-dark-v5 g-mr-10"></i>
-                        <span>Support Center</span>
-                      </h4>
-                    </li>
-                    <li>
-                      <h4 class="h6 d-flex align-items-baseline">
-                        <i class="fa fa-angle-right g-color-gray-dark-v5 g-mr-10"></i>
-                        <span>SPurno Animation Studio</span>
-                      </h4>
-                    </li>
-                  </ul>
 
-                  <p>Praesent ultrices, enim a varius condimentum, nunc elit rhoncus ligula, quis fringilla risus augue sit amet enim. Curabitur dolor elit, egestas eget lectus vel, pretium semper tellus. Nunc urna lectus, vulputate ut tellus aliquam, pharetra consectetur enim. Nunc scelerisque libero diam, nec tempor justo hendrerit eu.</p>
-
-                  <div class="text-center g-width-70x--md mx-auto g-my-40">
-                    <h3 class="text-uppercase g-color-primary"></h3>
-                  </div>
-                </div>
+                <a href="https://mega.nz/folder/U1AhyDwL#kc97tQTgFsdxbAkrdj7CnA" class="btn btn-md u-btn-gradient-v1 u-btn-skew g-font-weight-600 g-letter-spacing-0_5 text-uppercase g-mr-10 g-mb-15">
+                  <span class="u-btn-skew__inner">
+                    <i class="fa fa-check-circle g-mr-3"></i>
+                    Download 5 Pro Templates
+                  </span>
+                </a>
+                <a href="https://stock.adobe.com/contributor/211977281/SPurnoAnimation" class="btn btn-md u-btn-gradient-v1 u-btn-skew g-font-weight-600 g-letter-spacing-0_5 text-uppercase g-mr-10 g-mb-15">
+                  <span class="u-btn-skew__inner">
+                    <i class="fa fa-check-circle g-mr-3"></i>
+                    Buy From AdobeStock
+                  </span>
+                </a>
 
                 <!-- Sources & Tags -->
                 <div class="g-mb-30">
