--- a/animation-studio-after-effects.html
+++ b/animation-studio-after-effects.html
@@ -847,7 +847,7 @@
                       </a>
                     </li>
                     <li class="list-inline-item ml-auto">
-                      <i class="icon-eye u-line-icon-pro align-middle mr-1"></i> Views 500K+
+                      <i class="icon-eye u-line-icon-pro align-middle mr-1"></i> Views 1M+
                     </li>
                   </ul>
 
@@ -1132,23 +1132,6 @@
                   <div class="g-width-70x--md 1mx-auto g-my-40">
                     </blockquote>
                   </div>
-                  
-                  <!-- google ads  -->
-                  <section class="ad-section in-content-ad">
-                    <ins class="adsbygoogle"
-                            style="display:block; text-align:center;"
-                            data-ad-layout="in-article"
-                            data-ad-format="fluid"
-                            data-ad-client="ca-pub-5756742830355549"
-                            data-ad-slot="9992837563"></ins>
-                        <script>
-                            (adsbygoogle = window.adsbygoogle || []).push({});
-                        </script>
-                    <div class="ad-container">
-                    <!-- Paste AdSense code here -->
-                </div>
-                </section>
-
                 <a href="https://mega.nz/folder/U1AhyDwL#kc97tQTgFsdxbAkrdj7CnA" class="btn btn-md u-btn-gradient-v1 u-btn-skew g-font-weight-600 g-letter-spacing-0_5 text-uppercase g-mr-10 g-mb-15">
                   <span class="u-btn-skew__inner">
                     <i class="fa fa-check-circle g-mr-3"></i>
