--- a/infographic.html
+++ b/infographic.html
@@ -886,9 +886,12 @@
                 </header>
 
                 <div class="g-font-size-16 g-line-height-1_8 g-mb-30">
-                  <figure class="u-shadow-v25 g-mb-30">
-                    <img class="img-fluid w-100" src="images/3d-infographic-hexagon-animated-screen.jpg" alt="SPurno Animation Studio">
-                  </figure>
+                  <div class="embed-responsive embed-responsive-16by9 g-mb-60">
+                    <video preload="auto" controls controls="controls" poster="images/3d-infographic-hexagon-animated-screen.jpg" __idm_id__="8193">
+                      <source src="videos/infographics-video-demo.mp4" type="video/webm;">
+                        <source src="videos/infographics-video-demo.mp4" type="video/mp4;">
+                    </video>
+                  </div>
 
                   <p>Find & Download the most popular 3d Infographic videos on AdobeStock ✓ Premium for commercial use ✓ High Quality Animated Videos ✓ Made for Creative Projects</p>
                   <P>Over up all your presentations by adding a third dimension! Right, slides are flat, but our infographics have a 3D effect that will amaze your audience. Pie charts, blocks, bars, pyramids and all kinds of diagrams look better if there’s some perspective added to them. Customize them with your data and convey your points in a visual way.</P>
