--- a/3d-infographic.html
+++ b/3d-infographic.html
@@ -887,15 +887,12 @@
                     </li>
                   </ul>
                 </header>
-                <script type="text/javascript">
-                  atOptions = {
-                    'key' : '2a2217b42fa7a8d12535315bcd7f5d42',
-                    'format' : 'iframe',
-                    'height' : 90,
-                    'width' : 728,
-                    'params' : {}
-                  };
-                </script>
+                <div class="embed-responsive embed-responsive-16by9 g-mb-60">
+                  <video preload="auto" controls controls="controls" poster="images/3d-infographic-hexagon-animated-screen.jpg" __idm_id__="8193">
+                    <source src="videos/infographics-video-demo.mp4" type="video/webm;">
+                      <source src="videos/infographics-video-demo.mp4" type="video/mp4;">
+                  </video>
+                </div>
                 <script type="text/javascript" src="//www.topcpmcreativeformat.com/2a2217b42fa7a8d12535315bcd7f5d42/invoke.js"></script>
           
                 <h3>3D Infographic: Revolutionizing Media and Web Media</h3>
