--- a/adobe-after-effect-animation-tutorial.html
+++ b/adobe-after-effect-animation-tutorial.html
@@ -1120,14 +1120,20 @@
                     </blockquote>
                   </div>
                   <h5 class="h5 g-color-gray-dark-v1 g-font-weight-600 g-mb-10">Download Section</h5>
-                  <a href="https://mega.nz/folder/U1AhyDwL#kc97tQTgFsdxbAkrdj7CnA" class="btn btn-md u-btn-outline-gradient-v2 g-mr-10 g-mb-15">Download 5 Premium Templates</a>
+                  <a href="https://mega.nz/folder/U1AhyDwL#kc97tQTgFsdxbAkrdj7CnA" class="btn btn-md u-btn-gradient-v1 u-btn-skew g-font-weight-600 g-letter-spacing-0_5 text-uppercase g-mr-10 g-mb-15">
+                    <span class="u-btn-skew__inner">
+                      <i class="fa fa-check-circle g-mr-3"></i>
+                      Download 5 Pro Templates
+                    </span>
+                  </a>
+                  <a href="https://stock.adobe.com/contributor/211977281/SPurnoAnimation" class="btn btn-md u-btn-gradient-v1 u-btn-skew g-font-weight-600 g-letter-spacing-0_5 text-uppercase g-mr-10 g-mb-15">
+                    <span class="u-btn-skew__inner">
+                      <i class="fa fa-check-circle g-mr-3"></i>
+                      Buy From AdobeStock
+                    </span>
+                  </a>
                   </ul>
 
-                  
-
-                  <div class="text-center g-width-70x--md mx-auto g-my-40">
-                    <h5 class="text-uppercase g-color-primary"></h5>
-                  </div>
                 </div>
 
                 <!-- Sources & Tags -->
